# saw-spec-gen

./: .gitignore  .linecount-allow  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  SAW_SPEC_GEN_BUG_REPORT_sret_not_detected.md  SAW_SPEC_GEN_BUG_REPORT_unsized_pointer_silent_fallback.md  handoff_saw_poison_insertvalue.md  verify-all.ps1  verify-equiv.ps1  verify-rust.ps1  verify.ps1
.beads/: issues.jsonl  metadata.json
.githooks/: pre-commit
.github/: copilot-instructions.md
config/: container_layouts.toml
demo/: add_one.cpp  add_one_spec.cry  adversarial.cpp  adversarial.h  audit.cpp  audit.h  audit_cpp_spec.cry  audit_spec.cry  checksum.cpp  checksum.h  checksum_spec.cry  deep_havoc.cpp  deep_havoc.h  interface_example.cpp  interface_example.h  ivalidator_stubs.c  prove_adversarial.saw  prove_cpp.saw  prove_vtable_demo.saw  prove_vtable_havoc.saw  token_service.mir.json  token_service.rs  token_service_out.linked-mir.json  validator.cpp  validator.h  verify.saw  verify_add_one.saw  verify_audit.saw  verify_audit_havoc.saw  verify_audit_wrong.saw  verify_interface.saw  vtable_demo.cpp  vtable_demo.h
docs/: 03-stateful-method-specs.md  04-heterogeneous-structs.md  07-activate-vtable-stub-failure.md  08-activate-mutex-ownership-levels-bug.md  20-optional-sret-e2e-post-pr74-regression.md  23-remaining-memory-buffer-issues.md  config-over-cli-flags-proposal.md  proof-markers.md  result-json.md  rust-cleanup-funclet-integration.md  rust-cleanup-funclet-lowering-proposal.md  rust-cpp-equivalence-aggregate-bridge.md  rust-cpp-equivalence-parity.md  (+1 more)
(+727 files in other folders)
