[package]
name = "saw-spec-gen"
version = "0.1.0"
edition = "2021"
description = "Auto-generate SAW verification specs from C++ AST and Rust MIR type information"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[[bin]]
name = "saw-spec-gen"
path = "src/main.rs"
